<resources>
    <string name="app_name">RotateCam</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nomeCadastro">Nome</string>
    <string name="sobrenomeCadastro">Sobrenome</string>
    <string name="emailCadastro">E-mail</string>
    <string name="senhaCadastro">Senha</string>
    <string name="confirmarSenhaCadastro">Confirmar senha</string>
    <string name="cadastrarConfirmaCadastro">Cadastrar</string>
    <string name="btnVoltar">Voltar</string>
</resources>
